# BirdCLEF2025

./: .gitignore  README.md  pyproject.toml
config/: config.yaml  train_config.yaml
config/augmentation/: augmentation.yaml
config/data/: data.yaml  train_data.yaml
config/model/: model.yaml
config/training/: training.yaml
data/: cv_split.csv  cv_split_wsecondary.csv
data/kaggle_datasets/birdclef2025_code/: dataset-metadata.json
data/kaggle_datasets/birdclef2025_models/: dataset-metadata.json
kaggle/: update_models.sh
notebooks/: birdclef2025-kaggle-inference.ipynb  birdclef2025-kaggle-trainer.ipynb  cv_split.ipynb  dataset_test.ipynb
scripts/: test_dataset.py  train.py
src/: main.py
src/augmentations/: __init__.py  audio_augmentations.py  spec_augmentations.py
src/config/: config.yaml
src/config/augmentation/: augmentation.yaml
src/config/data/: data.yaml
src/config/inference/: inference.yaml
src/config/model/: model.yaml
src/config/training/: training.yaml
src/dataset/: audio_dataset.py  ds_test.py
src/datasets/: audio_dataset.py
src/inference/: inference.py
src/losses/: __init__.py  focal_loss.py  losses.py
src/metrics/: __init__.py  metrics.py
src/models/: __init__.py  blocks.py  spec_cnn.py
src/scripts/: inference.py  oof_train.sh  train.py
src/trainer/: lit_trainer.py  train_utils.py
src/trainers/: __init__.py  lit_trainer.py
src/utils/: data.py  loss.py  other.py  plots.py  quantization.py  temp_smoother.py
